# dsc400

./: .gitignore  404.html  Dockerfile  README.md  build_content.py  course.yaml  index.html  mkdocs.yml  outline.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
data/stardew/: family.csv  friends.csv  gifts.csv  villagers.csv
docs/: index.md
docs/lessons/10-week/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md
docs/lessons/12-week/: week01.md  week02.md  week03.md  week04.md  week05.md  week06.md  week07.md  week08.md  week09.md  week10.md  week11.md  week12.md
docs/topics/: Week 01.md  Week 02.md  Week 03.md  Week 04.md  Week 05.md  Week 06.md  Week 07.md  Week 08.md  Week 09.md  Week 10.md  Week 11.md  Week 12.md
lessons/: week01.yaml  week02.yaml  week03.yaml  week04.yaml  week05.yaml  week06.yaml  week07.yaml  week08.yaml  week09.yaml  week10.yaml  week11.yaml  week12.md  week12.yaml
lessons/10-week/week01/: index.html
lessons/10-week/week02/: index.html
lessons/10-week/week03/: index.html
lessons/10-week/week04/: index.html
lessons/10-week/week05/: index.html
lessons/10-week/week06/: index.html
lessons/10-week/week07/: index.html
lessons/10-week/week08/: index.html
lessons/10-week/week09/: index.html
notebooks/assignments/: Assignment 01.ipynb  Assignment 02.ipynb  Assignment 03.ipynb  Assignment 04.ipynb  Assignment 05.ipynb  Assignment 06.ipynb  Assignment 07.ipynb  Assignment 08.ipynb  Assignment 09.ipynb  Assignment 10.ipynb  Assignment 11.ipynb  Assignment 12.ipynb  Assignment 12a_client.ipynb
notebooks/examples/: PySpark Pi.ipynb
search/: search_index.json
templates/md/: discussion-board.md  intro.md  programming-exercise.md  readings.md  supplemental-readings.md  syllabus-part-II.md
tests/: test_dsc400.py
(+25 files in other folders)
