[tool.poetry]
name = "dsc400"
version = "0.1.0"
description = ""
authors = ["Shawn Hermans <shermans@bellevue.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.1.2"
pandas = "^1.3.3"
psutil = "^5.8.0"
networkx = "^2.6.3"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"
tinydb = "^4.5.2"
s3fs = "^2021.10.1"
kafka-python = "^2.0.2"
plotly = "^5.3.1"
pygal = "^2.4.0"
requests = "^2.26.0"
cogdb = "^2.0.5"
keras = "^2.6.0"
tensorflow = "^2.6.0"
pydot = "^1.4.2"
Pillow = "^8.4.0"
zerorpc = "^0.6.3"
graphviz = "^0.17"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.3"
Faker = "^9.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
