[tool.poetry]
name = "dsc400"
version = "0.1.0"
description = ""
authors = ["Shawn Hermans <shermans@bellevue.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyspark = "^3.3.1"
pandas = "^1.5.2"
psutil = "^5.9.4"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
tinydb = "^4.7.0"
kafka-python = "^2.0.2"
plotly = "^5.11.0"
pygal = "^3.0.0"
requests = "^2.28.1"
cogdb = "^3.0.2"
pydot = "^1.4.2"
Pillow = "^9.4.0"
zerorpc = "^0.6.3"
graphviz = "^0.20.1"
Jinja2 = "^3.1.2"
Faker = "^15.3.4"
tabulate = "^0.9.0"
falcon = "^3.1.1"
keras = "^2.11.0"
pip = "^22.3.1"
tensorflow-macos = {version = "^2.11.0", markers = "sys_platform == 'darwin'"}
tensorflow = {version = "^2.11.0", markers = "sys_platform == 'win32'"}
s3fs = "^2023.1.0"
networkx = "^3.0"

[tool.poetry.dev-dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.2"
pytest = "^7.2.0"
devtools = {version = "^0.10.0", extras = ["pygments"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
